--- a/index.html
+++ b/index.html
@@ -141,12 +141,10 @@
             }
 
             .duplicateCheckbox:checked:after {
-                content: '\2714';
-                font-size: 16px;
+                content: url("images/checkmark.png");
                 position: absolute;
-                top: -1px;
-                left: 1px;
-                color: #99a1a7;
+                top: -3px;
+                left: -3px;
             }
 
             .dupeIcon {
