--- a/index.html
+++ b/index.html
@@ -142,10 +142,12 @@
             }
 
             .duplicateCheckbox:checked:after {
-                content: url("images/checkmark.png");
+                content: '\2714';
+                font-size: 10px;
                 position: absolute;
-                top: -3px;
-                left: -3px;
+                top: -1px;
+                left: 1px;
+                color: #99a1a7;
             }
 
             .dupeIcon {
