Font size, fixed mis-capitalization

--- a/index.html
+++ b/index.html
@@ -162,6 +162,8 @@
                 height: inherit;
                 padding-left: 2px;
                 background-color: white;
+                font-size: 11px;
+                margin-bottom: -1.5px;
             }
 
             .customImage {
@@ -249,7 +251,7 @@
                                     <li><input type="checkbox" class="duplicateCheckbox" disabled><img class="dupeIcon icon-actors"/><span class="dupeText coreData"> Generic Attack Impact Model</span></li>
                                     <li><input type="checkbox" class="duplicateCheckbox" disabled><img class="dupeIcon icon-actors"/><span class="dupeText coreData"> Generic Attack Impact Sound</span></li>
                                     <li><input type="checkbox" class="duplicateCheckbox" disabled><img class="dupeIcon icon-actors"/><span class="dupeText coreData"> Generic Attack Launch Model</span></li>
-                                    <li><input type="checkbox" class="duplicateCheckbox" disabled><img class="dupeIcon icon-actors"/><span class="dupeText coreData"> Generic Attack Launch SOund</span></li>
+                                    <li><input type="checkbox" class="duplicateCheckbox" disabled><img class="dupeIcon icon-actors"/><span class="dupeText coreData"> Generic Attack Launch Sound</span></li>
                                     <li><input type="checkbox" class="duplicateCheckbox unitDataDupe" disabled><img class="dupeIcon customImage" src="images/btn-unit-terran-marine.png"/><span class="dupeText standardDependData"> Marine</span></li>
                                     <li><input type="checkbox" class="duplicateCheckbox weapDataDupe" disabled><img class="dupeIcon icon-actors"/><span class="dupeText standardDependData"> Marine Attack</span></li>
                                     <li><input type="checkbox" class="duplicateCheckbox unitDataDupe" disabled><img class="dupeIcon icon-actors"/><span class="dupeText standardDependData"> Marine_Death</span></li>
@@ -376,7 +378,7 @@
                                     <li><input type="checkbox" class="duplicateCheckbox" disabled><img class="dupeIcon icon-actors"/><span class="dupeText coreData"> Generic Attack Impact Model</span></li>
                                     <li><input type="checkbox" class="duplicateCheckbox" disabled><img class="dupeIcon icon-actors"/><span class="dupeText coreData"> Generic Attack Impact Sound</span></li>
                                     <li><input type="checkbox" class="duplicateCheckbox" disabled><img class="dupeIcon icon-actors"/><span class="dupeText coreData"> Generic Attack Launch Model</span></li>
-                                    <li><input type="checkbox" class="duplicateCheckbox" disabled><img class="dupeIcon icon-actors"/><span class="dupeText coreData"> Generic Attack Launch SOund</span></li>
+                                    <li><input type="checkbox" class="duplicateCheckbox" disabled><img class="dupeIcon icon-actors"/><span class="dupeText coreData"> Generic Attack Launch Sound</span></li>
                                     <li><input type="checkbox" class="duplicateCheckbox" disabled checked><img class="dupeIcon customImage" src="images/btn-unit-terran-marine.png"/><span class="dupeText standardDependData"> Marine</span></li>
                                     <li><input type="checkbox" class="duplicateCheckbox" disabled><img class="dupeIcon icon-actors"/><span class="dupeText standardDependData"> Marine Attack</span></li>
                                     <li><input type="checkbox" class="duplicateCheckbox" disabled checked><img class="dupeIcon icon-actors"/><span class="dupeText standardDependData"> Marine_Death</span></li>
@@ -504,7 +506,7 @@
                                 <li><input type="checkbox" class="duplicateCheckbox" disabled><img class="dupeIcon icon-actors"/><span class="dupeText coreData"> Generic Attack Impact Model</span></li>
                                 <li><input type="checkbox" class="duplicateCheckbox" disabled><img class="dupeIcon icon-actors"/><span class="dupeText coreData"> Generic Attack Impact Sound</span></li>
                                 <li><input type="checkbox" class="duplicateCheckbox" disabled><img class="dupeIcon icon-actors"/><span class="dupeText coreData"> Generic Attack Launch Model</span></li>
-                                <li><input type="checkbox" class="duplicateCheckbox" disabled><img class="dupeIcon icon-actors"/><span class="dupeText coreData"> Generic Attack Launch SOund</span></li>
+                                <li><input type="checkbox" class="duplicateCheckbox" disabled><img class="dupeIcon icon-actors"/><span class="dupeText coreData"> Generic Attack Launch Sound</span></li>
                                 <li><input type="checkbox" class="duplicateCheckbox" disabled><img class="dupeIcon customImage" src="images/btn-unit-terran-marine.png"/><span class="dupeText standardDependData"> Marine</span></li>
                                 <li><input type="checkbox" class="duplicateCheckbox" disabled checked><img class="dupeIcon icon-actors"/><span class="dupeText standardDependData"> Marine Attack</span></li>
                                 <li><input type="checkbox" class="duplicateCheckbox" disabled><img class="dupeIcon icon-actors"/><span class="dupeText standardDependData"> Marine_Death</span></li>
@@ -638,7 +640,7 @@
                                 <li><input type="checkbox" class="duplicateCheckbox" disabled><img class="dupeIcon icon-actors"/><span class="dupeText coreData"> Generic Attack Impact Model</span></li>
                                 <li><input type="checkbox" class="duplicateCheckbox" disabled><img class="dupeIcon icon-actors"/><span class="dupeText coreData"> Generic Attack Impact Sound</span></li>
                                 <li><input type="checkbox" class="duplicateCheckbox" disabled><img class="dupeIcon icon-actors"/><span class="dupeText coreData"> Generic Attack Launch Model</span></li>
-                                <li><input type="checkbox" class="duplicateCheckbox" disabled><img class="dupeIcon icon-actors"/><span class="dupeText coreData"> Generic Attack Launch SOund</span></li>
+                                <li><input type="checkbox" class="duplicateCheckbox" disabled><img class="dupeIcon icon-actors"/><span class="dupeText coreData"> Generic Attack Launch Sound</span></li>
                                 <li><input type="checkbox" class="duplicateCheckbox" disabled><img class="dupeIcon customImage" src="images/btn-unit-terran-marine.png"/><span class="dupeText standardDependData"> Marine</span></li>
                                 <li><input type="checkbox" class="duplicateCheckbox" disabled><img class="dupeIcon icon-actors"/><span class="dupeText standardDependData"> Marine Attack</span></li>
                                 <li><input type="checkbox" class="duplicateCheckbox" disabled><img class="dupeIcon icon-actors"/><span class="dupeText standardDependData"> Marine_Death</span></li>
