Clarified model/sound data, re-colored for banner

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="styles/style.css">
         <link rel="stylesheet" href="styles/gh-fork-ribbon.css">
-        <style>.github-fork-ribbon:before { background-color: #060; }</style>
+        <style>.github-fork-ribbon:before { background-color: #f93; }</style>
     </head>
     <body>
         <main>
@@ -36,7 +36,7 @@
                     </ul>
                 </li>
             </ul>
-            <p class="footnote">*There is a difference between a model file and model data, as well as a sound file and sound data. In this tutorial I'm only referring to model data and sound data. Most model files and sound files do not need new model data or sound data. That being said, unless you know what you're doing, I do not recommend duplicating model/sound data.</p>
+            <p class="footnote">*There is a difference between a model file and model data, as well as a sound file and sound data. In this tutorial I'm only referring to model data and sound data. Most model files and sound files already have model data and sound data that you can reference in actor fields, so I personally <strong>do not</strong> recommend duplicating them unless you need to.</p>
             <div class="sidebar">
                 <ul id="duplicateVisualization" class="duplicateList">
                     <li><input type="checkbox" class="duplicateCheckbox unitDataDupe" disabled><img class="dupeIcon customImage" src="images/btn-unit-terran-marine.png"/><span class="dupeText standardDependData"> Marine</span>
