Reworded some text about data colors

--- a/index.html
+++ b/index.html
@@ -163,11 +163,11 @@
             </div>
             <p>Data is color-coded depending on where it originates.</p>
             <ul>
-                <li><span class="coreData">Grey data</span> is part of the game's Core data dependency. <strong>In the majority of cases, you do not want to duplicate these.</strong></li>
+                <li><span class="coreData">Grey data</span> is part of the game's Core data dependency. <strong>You usually do not want to duplicate these.</strong></li>
                 <li><span class="standardDependData">Blue data</span> is part of a standard dependency, such as an expansion's data or its campaign data.</li>
                 <li><span class="nonstandardDependData">Orange data</span> is part of a non-standard dependency that was probably created by you or another user.</li>
-                <li><span class="docData">Green data</span> is directly part of the map or mod that you're editing. These contain data you've probably changed or created.
-                <li><span class="docParentData">Light Green data</span> is directly part of the map or mod that you're editing that belongs to a parent and hasn't been edited directly.</li>
+                <li><span class="docData">Green data</span> is part of the map or mod that you're editing. This is data you've probably changed or created.
+                <li><span class="docParentData">Light Green data</span> is part of the map or mod that you're editing. It's a child of other data and hasn't been edited directly.</li>
             </ul>
             <div id="unit-data" class="disabledElement">
                 <h2>Unit Data</h2>
