Probably not something similar

--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                 <p>Additionally, you'll want the unit's primary <strong>unit actor</strong>, which should share a name similar to the Unit and will often stand out with an icon that resembles the unit. In our case, it's called <code>Marine</code>.</p>
                 <p>These are the only two data entries needed to get a unit to fundamentally act like a unit. There are sometimes a few extra actors that you can choose to duplicate if you want their functionality. Two examples include a Death sound actor and a Splat actor.</p>
                 <div class="rightShifted">
-                    <p>Many units have an actor that has the name of the unit suffixed by <code>_Death</code> or something similar. This is a sound actor that grants the unit a chance to play a death sound when it dies. You may also duplicate this if you want to retain that functionality. For us, <code>Marine_Death</code></p>
+                    <p>Many units have an actor that has the name of the unit suffixed by <code>_Death</code>. This is a sound actor that grants the unit a chance to play a death sound when it dies. You may also duplicate this if you want to retain that functionality. For us, <code>Marine_Death</code></p>
                     <p>Some structures will also have a Splat actor that can be useful to duplicate which creates an image beneath the structure making it feel more grounded in the world. It uses the unit's name followed by <code> Splat</code>. For now we're only focusing on a unit.</p>
                 </div>
                 <div id="unit-models" class="disabledElement">
