Slight rewording in duplication target paragraph

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <p>Duplicating units allows you to create separate units that have different attributes from the originals. It can even be used as a baseline to create an entirely new unit.</p>
             <div class="rightShifted">
                 <h2>What should I duplicate?</h2>
-                <p>If your goal is to create a variant of an existing unit, it should be pretty easy to select a unit to duplicate. However, if your intention is to create something unique, I would still recommend duplicating a unit that mechanically resembles the unit you have in mind. There are a lot of different fields that can be glossed over, so you'll want to work with a good baseline. In this tutorial, we'll cover duplicating a Marine.</p>
+                <p>If your goal is to create a variant of an existing unit, the duplication target should be obvious. If your intention is to create something unique, I would still recommend duplicating a unit that mechanically resembles the unit you have in mind. There are a lot of different fields that can be glossed over, so you'll want to work with a good baseline. In this tutorial, we'll cover duplicating a Marine.</p>
             </div>
             <h1 id="title">How to Duplicate a Unit</h1>
             <p>Before you start duplicating, you need to determine what aspects of the unit you want to make modifications to. The more things you choose, the more control you'll have, but the more space used by your map. It's best to avoid duplicating anything that you don't need to.</p>
