--- a/index.html
+++ b/index.html
@@ -509,7 +509,7 @@
                 <div id="ability-sounds" class="disabledElement">
                     <h3>Ability Sounds</h3>
                     <p>In most cases you'll probably just want to change the sounds located in your ability's sound actor's fields to specify different sounds, but duplicating sounds is useful if you're importing new sound files or using sounds that don't have associated sound data in your dependencies.</p>
-                    <p>As above, you can usually guess what models belong to an ability based on its name. In our case, it is similar to the sound actor <code>Marine_Stimpack</code>.</p>
+                    <p>As above, you can usually guess what sounds belong to an ability based on its name. In our case, it is similar to the sound actor <code>Marine_Stimpack</code>.</p>
                 </div>
             </div>
         </main>
