One less paragraph in Ability Data

--- a/index.html
+++ b/index.html
@@ -494,8 +494,7 @@
                     </ul>
                 </ul>
                 <p>Abilities tend to vary pretty wildly, so it would serve to follow ability effect trees to understand how they work. Unfortunately the number of different naming schemes that abilities tend to follow is too vast to give a thorough enough explanation, but for the most part, if an effect or actor has the ability name in its name, it's probably safe to assume it's associated with it.</p> <!-- TODO: Create "effect tree following" tutorial and reference it here -->
-                <p>For our case, the Marine's StimPack is a pretty simple ability. There are a few different parts of the Stimpack we would want to duplicate.</p>
-                <p>The ability data itself, <code>Marine - StimPack</code> is the easy one. </p>
+                <p>For our case, the Marine's StimPack is a pretty simple ability. There are a few different parts of the Stimpack we would want to duplicate. The ability data itself, <code>Marine - StimPack</code> is the easy one.</p>
                 <p>The effect data is also fairly obvious, using a similar name to our ability, <code>Marine - Stim Pack (Apply Buff)</code>.</p>
                 <p>The behavior data is again similar to the ability name, <code>Marine - Stimpack</code>.</p>
                 <p>There is also a button that you can duplicate called <code>Use Stimpack</code> if you want to change the button's text, name, or hotkey.</p>
