--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
                     <p>The launch sound is located in the <em>attack actor</em>'s <code>Launch Assets</code> field. The launch sound usually follows the format of the unit's name, followed by <code>_AttackLaunch</code>. In our case, <code>Marine_AttackLaunch</code>.</p>
                     <p>In some cases, such as with the Marine, there is can be an additional launch sound that comes from a container such as the Bunker located in the <em>attack actor</em>'s <code>Container Assets</code>. The Marine uses <code>Marine_BunkerAttackLaunch</code> for this.</p>
                 </div>
-                <p>After duplicating everything, you can return to the unit and replace the weapon with the newly duplicated weapon in the unit's `Weapon` field.</p>
+                <p>After duplicating everything, you can return to the unit and replace the weapon with the newly duplicated weapon in the unit's <code>Weapon</code> field.</p>
             </div>
             <div id="ability-data" class="disabledElement">
                 <h2>Ability Data <a class="returnLink" href="#">^</a></h2>
@@ -453,7 +453,7 @@
                     <p>In most cases you'll probably just want to change the sounds located in your ability's sound actor's fields to specify different sounds, but duplicating sounds is useful if you're importing new sound files or using sounds that don't have associated sound data in your dependencies.</p>
                     <p>Stimpack's sound data uses a name that is similar to our ability data: <code>Marine_Stimpack</code>.</p>
                 </div>
-                <p>After duplicating everything, you can return to the unit and replace the ability with the newly duplicated ability in the unit's `Ability` field.</p>
+                <p>After duplicating everything, you can return to the unit and replace the ability with the newly duplicated ability in the unit's <code>Ability</code> field.</p>
             </div>
             <div id="pitfalls">
                 <h2>Common Pitfalls <a class="returnLink" href="#">^</a></h2>
