More formatting/grammar fixes

--- a/index.html
+++ b/index.html
@@ -466,7 +466,7 @@
                     <li><p>Actors often fail to link their burrowed variant's units and abilities properly.</p></li>
                 </ul>
                 <h3>Actors</h3>
-                <p>Actors' are prone to failing to link correctly. After duplicating a unit, it's recommended that you scan an Actor's <code>Events</code> and fix any items that did not properly link to your unit or its abilities or weapons.</p>
+                <p>Actors are prone to failing to link correctly. After duplicating a unit, it's recommended that you scan the *unit actor*'s <code>Events</code> and fix any items that did not properly link to your unit or its abilities or weapons.</p>
             </div>
         </main>
         <script src="scripts/interact.js"></script>
