Unit -> Data title

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <body>
         <a class="github-fork-ribbon right-top" href="https://github.com/alzarath/sc2-duplication-tutorial" data-ribbon="Fork me on GitHub" title="Fork me on GitHub">Fork me on GitHub</a>
         <main>
-            <h1 id="title">Unit Duplication</h1>
+            <h1 id="title">Data Duplication</h1>
             <p>Duplicating data allows you to create separate data that has different attributes from the source. It can even be used as a baseline to create entirely new data.</p>
             <div class="rightShifted">
                 <h2>What should I duplicate?</h2>
